# check_all

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
check_init_all/: __init__.py
scripts/: check_init_all.py
